# mil-manager-catalog

./: CMakeLists.txt  README.md
.github/workflows/: publish-catalog-pages.yml
catalog-source/: catalog-metadata.json  catalog-source.json
catalog-source/entries/: acnh-save-pack.json  dust-ptbr.json  i-am-setsuna-ptbr.json  mk8-mod-tools.json  patapon-12-replay-ptbr.json  puzzle-quest-immortal-edition-ptbr.json  smash-cheats.json  synth-riders-ptbr.json
docs/: implementation-plan.md  settings.github-pages.example.ini
include/mil/: app.hpp  catalog.hpp  config.hpp  graphics.hpp  http.hpp  installer.hpp  models.hpp  platform.hpp
site/: index.html  index.json
site-src/admin/: app.js  index.html
site/admin/: app.js
src/: app.cpp  catalog.cpp  config.cpp  graphics.cpp  http.cpp  installer.cpp  main.cpp  platform_switch.cpp
tools/: export-ryujinx-installed.py  generate-index.py  prepare-pages-site.py  start-ryujinx-with-sync.ps1  sync-ryujinx.ps1
